# FishAcoustics

./: .gitignore  README.md  echogram_colourmaps.py  pyproject.toml
acoustics/: plot_transducer_near_fields.py
dwba/: dwba.py
lsss/: ek_date_conversion.py  ek_raw_io.py  ek_raw_parsers.py  korona_raw_read.py  read_korona_datagrams.py  read_lsss_db_export.py
seawater/: sw_absorption.py
src/acoustics/: echoview_utils.py  plot_transducer_near_fields.py  readme.md
src/dwba/: dwba.py
src/lsss/: ek_date_conversion.py
src/lsss_tools/: ek_raw_io.py  ek_raw_parsers.py  korona_raw_read.py  lsss.py  read_lsss_db_export.py
src/seawater/: sw_absorption.py
src/wassp/: convert_wassp_to_ek60.py  do_read_wassp.py
